--- a/index.html
+++ b/index.html
@@ -54,12 +54,16 @@
               <span>Yonatan Tefera</span>
             </div>
             <div class="featured-name">
-              <p>I'm <span class="typedText">Designer</span></p>
+              <p>I'm a <span class="typedText"></span></p>
             </div>
             <div class="featured-text-info">
               <p>
-                Experienced Fullstack developer witth a passion creating
-                visually stunning and user-friendly websites.
+                I am a passionate full-stack developer with a strong background
+                in both front-end and back-end technologies. I enjoy building
+                seamless, user-friendly applications, focusing on clean code and
+                efficient solutions. With experience in modern frameworks and a
+                commitment to continuous learning, I aim to create impactful
+                digital experiences that solve real-world problems.
               </p>
             </div>
             <div class="featured-text-btn">
@@ -97,11 +101,12 @@
               <div class="about-info">
                 <h3>My introduction</h3>
                 <p>
-                  I am well-versed in HTML, CSS and JavaScript, and other
-                  cutting edge frameworks and libraries, which allows me to
-                  implement interactive features. Additionally, I have
-                  experience working with content management systems(CMS) like
-                  Wordpress.
+                  I am well-versed in HTML, CSS, and JavaScript, along with
+                  modern frameworks and libraries, enabling me to implement
+                  dynamic and interactive front-end features. Additionally, I
+                  have extensive experience with back-end technologies, allowing
+                  me to build complete, scalable, and efficient web applications
+                  from the ground up.
                 </p>
                 <div class="about-btn">
                   <button class="btn">
@@ -130,9 +135,9 @@
                   <h3>Backend</h3>
                 </div>
                 <div class="skills-list">
-                  <span>PHP</span>
+                  <span>Node.js</span>
                   <span>JAVA</span>
-                  <span>Python</span>
+                  <span>Django</span>
                   <span>C++</span>
                 </div>
               </div>
@@ -163,7 +168,7 @@
             <div class="project-box">
               <i class="uil uil-users-alt"></i>
               <h3>Client</h3>
-              <label>25+ Happy Clients</label>
+              <label>3+ Happy Clients</label>
             </div>
             <div class="project-box">
               <i class="uil uil-award"></i>
@@ -172,7 +177,89 @@
             </div>
           </div>
         </section>
+
+        <section class="section" id="contact">
+          <div class="top-header">
+            <h1>Get in touch</h1>
+            <span>Do you have a project in your mind, contact me here</span>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="contact-info">
+                <h2>Find Me <i class="uil uil-arrow-circle-down"></i></h2>
+                <p>
+                  <i class="uil uil-envelope"></i>
+                  Email: yonatangirmachew3@gmail.com
+                </p>
+                <p><i class="uil uil-phone"></i> Tel: +251 947 885 940</p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="form-control">
+                <div class="form-inputs">
+                  <input
+                    type="text"
+                    name=""
+                    id=""
+                    class="input-field"
+                    placeholder="Name"
+                  />
+                  <input
+                    type="text"
+                    name=""
+                    id=""
+                    class="input-field"
+                    placeholder="Email"
+                  />
+                </div>
+                <div class="text-area">
+                  <textarea placeholder="Message"></textarea>
+                </div>
+                <div class="form-button">
+                  <button class="btn">
+                    Send <i class="uil uil-message"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
+      <footer>
+        <div class="top-footer">
+          <p>Yonatan Tefera .</p>
+        </div>
+        <div class="middle-footer">
+          <ul class="footer-menu">
+            <li class="footer_menu_list">
+              <a href="#home">Home</a>
+            </li>
+            <li class="footer_menu_list">
+              <a href="#about">About</a>
+            </li>
+            <li class="footer_menu_list">
+              <a href="#projects">Projects</a>
+            </li>
+            <li class="footer_menu_list">
+              <a href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-social-icons">
+          <div class="icon"><i class="uil uil-instagram"></i></div>
+          <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
+          <div class="icon"><i class="uil uil-twitter"></i></div>
+          <div class="icon"><i class="uil uil-github-alt"></i></div>
+        </div>
+        <div class="bottom-footer">
+          <p>
+            Copyright &copy;
+            <a href="#home" style="text-decoration: none">
+              -All rights reserved</a
+            >
+          </p>
+        </div>
+      </footer>
     </div>
 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
